use (100vh - 30px) for the image view on mobile devices

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         flex-basis: 100%;
       }
       .imageview {
-        height: 90vh;
+        height: calc(100vh - 30px);
       }
     }
   </style>
